// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@nx/container/plugin non-root project with Dockerfile should create nodes for non-root project with Dockerfile 1`] = `
{
  "projects": {
    "apps/your-docker-app": {
      "targets": {
        "build": {
          "configurations": {
            "ci": {
              "load": false,
              "metadata": {
                "images": [
                  "docker.io/my-docker-app",
                ],
                "tags": [
                  "type=schedule",
                  "type=ref,event=branch",
                  "type=ref,event=tag",
                  "type=ref,event=pr",
                  "type=sha,prefix=sha-",
                ],
              },
              "push": true,
            },
          },
          "dependsOn": [
            "build",
          ],
          "executor": "@nx-tools/nx-container:build",
          "options": {
            "engine": "docker",
            "load": true,
            "tags": [
              "docker.io/my-docker-app:dev",
            ],
          },
        },
      },
    },
  },
}
`;

exports[`@nx/container/plugin root project should create nodes with correct targets 1`] = `
{
  "projects": {
    ".": {
      "targets": {
        "build": {
          "configurations": {
            "ci": {
              "load": false,
              "metadata": {
                "images": [
                  "docker.io/my-docker-app",
                ],
                "tags": [
                  "type=schedule",
                  "type=ref,event=branch",
                  "type=ref,event=tag",
                  "type=ref,event=pr",
                  "type=sha,prefix=sha-",
                ],
              },
              "push": true,
            },
          },
          "dependsOn": [
            "build",
          ],
          "executor": "@nx-tools/nx-container:build",
          "options": {
            "engine": "docker",
            "load": true,
            "tags": [
              "docker.io/my-docker-app:dev",
            ],
          },
        },
      },
    },
  },
}
`;
